--- a/css/style.css
+++ b/css/style.css
@@ -169,7 +169,7 @@ button {
   height: 42px;
   text-align: center;
   background-color: var(--basic-red);
-
+  cursor: pointer;
   position: relative;
 }
 .logo-wrapper::after {
@@ -795,12 +795,16 @@ button {
   height: 100%;
 }
 .popular-manufacturers-item {
-  display: flex;
+  border: 1px solid var(--border-color-basic);
 }
-.popular-manufacturers-item {
+.popular-manufacturers-item a {
+  display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px solid var(--border-color-basic);
+}
+.popular-manufacturers-item a {
+  width: 100%;
+  height: 100%;
 }
 .popular-products-item--img-container,
 .perforators-list-item--img-container {
@@ -928,6 +932,9 @@ button {
   top: 38px;
   left: 41px;
   display: none;
+}
+.popular-products-button {
+  cursor: pointer;
 }
 .popular-products-button.buy,
 .perforators-list-button.buy {
@@ -1234,6 +1241,7 @@ margin-bottom: 30px;
   text-align: center;
   background-color: var(--basic-red);
   position: relative;
+  cursor: pointer;
 }
 .main-footer-logo {
   width: 138px;
@@ -1529,6 +1537,7 @@ margin-bottom: 30px;
   width: 460px;
   margin: 37px auto;
   border: none;
+  cursor: pointer;
 }
 .popup-feedback .popup-close {
   position: absolute;
@@ -2252,6 +2261,7 @@ opacity: 0.3;
 }
 .popup-feedback .popup-close {
   top: 18px;
+  cursor: pointer;
 }
 .popup-added-to-basket button {
   font-weight: 400;
