--- a/css/style.css
+++ b/css/style.css
@@ -152,7 +152,7 @@ button {
   margin-bottom: 60px;
 }
 .catalog-main-header {
-  margin-bottom: 20px;
+  margin-bottom: 18px;
 }
 .header-order-bar {
   margin-bottom: 45px;
@@ -162,7 +162,7 @@ button {
   display: grid;
   grid-template-columns: min-content min-content auto;
 
-  height: 42px;
+  min-height: 42px;
 }
 .logo-wrapper {
   width: 220px;
@@ -234,6 +234,8 @@ button {
   outline: none;
 
   position: relative;
+
+  text-overflow: ellipsis;
  }
 .search:focus {
   background-color: var(--basic-white);
@@ -405,7 +407,8 @@ button {
   display: block;
 
   margin-bottom: 10px;
-  padding-left: 30px;
+  padding-left: 75px;
+  width: 29px;
 }
 .header-phone:hover::after,
 .header-phone:focus::after {
@@ -933,7 +936,8 @@ button {
   left: 41px;
   display: none;
 }
-.popular-products-button {
+.popular-products-button,
+.perforators-list-button {
   cursor: pointer;
 }
 .popular-products-button.buy,
@@ -1012,7 +1016,7 @@ button {
  }
 .services {
   margin-bottom: 75px;
-  
+   
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
@@ -1042,12 +1046,12 @@ button {
 .services-description-item-guaranty {
   background-image: url(../img/services/guaranty.png);
   background-repeat: no-repeat;
-  background-position: 151px 0;
+  background-position: 240px 0;
 }
 .services-description-item-credit {
   background-image: url(../img/services/credit.png);
   background-repeat: no-repeat;
-  background-position: 151px 0;
+  background-position: 155px 0;
   height: 198px;
 }
 .services-description-item-credit button {
@@ -1217,8 +1221,9 @@ margin-bottom: 30px;
 .map-img {
   width: 300px;
   height: 158px;
+  display: block;
 
-  margin-bottom: 18px;
+  margin-bottom: 24px;
 }
 .about-us .tipical-red-button {
   width: 220px;
@@ -1242,6 +1247,11 @@ margin-bottom: 30px;
   background-color: var(--basic-red);
   position: relative;
   cursor: pointer;
+}
+.main-footer-logo-wrapper a{
+ display: block;
+  width: 100%;
+  height: 100%;
 }
 .main-footer-logo {
   width: 138px;
@@ -1270,17 +1280,12 @@ margin-bottom: 30px;
   
   display: flex;
   flex-wrap: wrap;
-  /* justify-content: flex-start; */
+  justify-content: space-between;
 }
 .site-sections-list li {
-  flex-grow: 1;
-  flex-shrink: 0;
-
-  max-width: 120px;
-
+  /* max-width: 120px; */
   margin-top: 37px;
   margin-bottom: 29px;
-  padding-left: 55px;
 }
 .site-sections-list li:first-child {
   padding-left: 0px;
@@ -1290,28 +1295,24 @@ margin-bottom: 30px;
 }
 .products-sections-list{
   padding: 0;
+  padding-top: 5px;
   margin: 0;
-  margin-bottom: 74px;
-  margin-left: 22px;
-
+  
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
 .products-sections-list li {
-  flex-grow: 1;
-  flex-shrink: 0;
-
-  max-width: 170px;
-  padding-left: 55px;
-  padding-top: 5px;
+  margin-bottom: 74px;
+  margin-left: 22px;
+  /* max-width: 170px; */
 }
-.products-sections-list li:first-child {
+/* .products-sections-list li:first-child {
   padding-left: 0;
-}
-.products-sections-list li:last-child {
+} */
+/* .products-sections-list li:last-child {
   margin-right: auto;
-}
+} */
 .footer-contacts{
   grid-column: 1/2;
   grid-row: 2/3;
@@ -1339,19 +1340,23 @@ margin-bottom: 30px;
 }
 .bottom-footer-wrapper {
   display: grid;
-  grid-template-columns: 1fr 255px 1fr;
+  grid-template-columns: 1fr 250px 1fr;
+  padding: 20px 0;
 }
 .feedback {
   display: flex;
+  justify-content: flex-start
+}
+.feedback p{
+  margin-right: 50px;
+}
+.feedback p:last-child{
+  margin-right: 0;
 }
 .copyright p,
 .feedback p {
   font-size: 16px;
   line-height: 18px;
-
-  margin-top: 35px;
-  margin-bottom: 35px;
-  
   color: var(--basic-white);
 }
 .feedback .feedback-info {
@@ -1382,8 +1387,7 @@ margin-bottom: 30px;
   margin: 0;
   padding: 0;
   margin-right: 118px;
-  margin-top: 34px;
-  margin-bottom: 29px;
+  margin-top: 12px;
 
   display: flex;
   flex-wrap: wrap;
@@ -1415,11 +1419,14 @@ margin-bottom: 30px;
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15); 
   background-color: var(--basic-white);
 
-  display: flex;
+  display: none;
   flex-wrap: wrap;
-  margin: 0 auto;
   
-  position: relative;
+  position: fixed;
+  left: 50%; 
+  top: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
 }
 .popup-feedback::before {
   content: "";
@@ -1555,14 +1562,12 @@ margin-bottom: 30px;
 /* reg user section */
 .reg-user-section {
   width: 300px;
-  margin-left: 45px;
-
-  display: flex;
-  flex-wrap: wrap;
+  margin-left: 42px; 
 }
 .reg-user-section-wrapper {
   width: 300px;
   height: 45px;
+  margin-bottom: 3px;
   background-color:var(--basic-white);
 
   display: flex;
@@ -1617,21 +1622,21 @@ margin-bottom: 30px;
 .reg-user-section-list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
-
+  justify-content:flex-start;
   width: 300px;
-
   padding: 0;
   margin: 0;
-
+  margin-left: 43px;
+}
+.reg-user-section-list li {
+  display: inline-block;
   position: relative;
+  margin-right: 35px;
 }
-.reg-user-section-list a {
-  font-size: 16px;
-  line-height: 18px;
-  color:var(--color-32425C);
+.reg-user-section-list li:last-child {
+  margin-right: 0;
 }
-.reg-user-section-list:after {
+.reg-user-section-list li+li::before {
   content: "";
   width: 6px;
   height: 6px;
@@ -1641,12 +1646,14 @@ margin-bottom: 30px;
 
   position: absolute;
   top: 50%;
-  left: 134px;
+  left: -23px;
 
   margin-top: -3px;
 }
-.reg-user-section-list li {
-  display: inline-block;
+.reg-user-section-list a {
+  font-size: 16px;
+  line-height: 18px;
+  color:var(--color-32425C);
 }
 .reg-user-section-link:hover path,
 .reg-user-section-link:focus path,
@@ -1726,14 +1733,12 @@ opacity: 0.3;
   color: var(--color-CA2C37);
 }
 .perforators-heading-wrapper {
-  height: 89px;
-  padding: 0;
-  margin-bottom: 20px;
+  padding: 30px;
+  margin-bottom: 16px;
+  box-sizing: border-box;
   background-color: var(--basic-background);
 }
 .products-list h1 {
-  display: inline-block;
-  
   font-size: 30px;
   line-height: 30px;
   font-weight: 400;
@@ -1741,9 +1746,7 @@ opacity: 0.3;
   
   padding: 0;
   margin: 0;
-  margin-left: 30px;
-  margin-top: 30px;  
-  
+    
   color: var(--color-32425C);
 }
 /* filters */
@@ -1751,7 +1754,7 @@ opacity: 0.3;
   display: grid;
   grid-template-columns: 220px 700px;
   column-gap: 20px;
-  margin-bottom: 68px;
+  margin-bottom: 58px;
 }
 .filters {
   font-family: "PT Sans", Arial, sans-serif;
@@ -1760,9 +1763,9 @@ opacity: 0.3;
 .filters-header-background-bar {
   display: block;
   box-sizing: border-box;
-  padding: 10px 0;
+  padding: 10px 18px;
   height: 38px;
-  margin-bottom: 14px;
+  margin-bottom: 12px;
   background-color: var(--color-F7F3EC);
   border-radius: 2px;
 }
@@ -1774,12 +1777,12 @@ opacity: 0.3;
   text-transform: uppercase;
 
   margin: 0;
-  margin-left: 18px;
 }
 .filters fieldset {
   border: none;
   margin: 0;
   padding: 0;
+  margin-bottom: 5px;
 }
 .filters legend {
   font-weight: 700;
@@ -1861,8 +1864,8 @@ opacity: 0.3;
   display: flex;
   justify-content: space-between;
 }
-.price-controls span {
- padding-top: 8px;
+.price-controls span{
+  padding-top: 8px;
 }
 .filters [type="number"] {
   font-family: inherit;
@@ -1873,11 +1876,12 @@ opacity: 0.3;
   display: inline-block;
   box-sizing: border-box;
   width: 95px;
+  height: 38px;
   border: none;
   border-radius: 2px;
   
   margin: 0;
-  padding: 10px 0;
+  padding-left: 18px;
   margin-bottom: 42px;
 
   background-color: var(--color-F7F3EC);
@@ -1892,6 +1896,7 @@ opacity: 0.3;
 }
 .filters-power-supply-list-item {
   position: relative;
+  margin-bottom: 15px;
 }
 .filters-manufacturers-list-item-label,
 .filters-power-supply-list-item-label { 
@@ -1939,9 +1944,8 @@ opacity: 0.3;
 .filters-power-supply-list {
   margin-bottom: 34px;
 }
-.filters-manufacturers-list-item,
-.filters-power-supply-list li{
-  margin-bottom: 10px;
+.filters-manufacturers-list-item {
+  margin-bottom: 20px;
 }
 .filters [type="checkbox"],
 .filters [type="radio"] {
@@ -1959,6 +1963,7 @@ opacity: 0.3;
   width: 100%;
   padding: 10px 78px;
   border:  1px solid var(--border-color-basic);
+  cursor: pointer;
 }
 .filters [type="submit"]:hover,
 .filters [type="submit"]:focus {
@@ -1977,6 +1982,7 @@ opacity: 0.3;
   flex-wrap: wrap;
   align-items: center;
   border-radius: 2px;
+  padding: 8px 20px;
 }
 .sorting h2 {
   font-family: "PT Sans", Arial, sans-serif;
@@ -1985,10 +1991,8 @@ opacity: 0.3;
   line-height: 18px;
   text-transform: uppercase;
 
-  padding: 10px 0;
   margin: 0;
   margin-right: 140px;
-  margin-left:20px;
 }
 .sorting button {
   font-family: "PT Sans", Arial, sans-serif;
@@ -2000,7 +2004,7 @@ opacity: 0.3;
 .sorting-list--price-type-functional {
   display: flex;
   flex-wrap: wrap;
-  width: 380px;
+  width: 400px;
   justify-content: flex-start;
 }
 .sorting-list--price-type-functional li {
@@ -2032,7 +2036,6 @@ opacity: 0.3;
 }
 .sorting ul {
   margin: 0;
-  margin-right: 20px;
   padding: 0;
 }
 .sorting button {
@@ -2040,6 +2043,7 @@ opacity: 0.3;
   color: var(--transparency-black);
   text-decoration: underline dotted var(--basic-red);
   background-color: transparent;
+  cursor: pointer;
 }
 .sorting button:hover,
 .sorting button:focus {
@@ -2127,6 +2131,7 @@ opacity: 0.3;
   width: 140px;
   height: 38px;
   text-transform: uppercase;
+  cursor: pointer;
  } 
 .pagination-list-item:hover,
 .pagination-list-item:focus,
@@ -2154,7 +2159,7 @@ opacity: 0.3;
   line-height: 24px;
   text-align: left;
 
-  padding-top: 64px;
+  padding: 64px 0;
 }
 .about-perforators h2 {
   font-family: "Cuprum", Arial, sans-serif;
@@ -2169,8 +2174,6 @@ opacity: 0.3;
 .about-perforators p {
   margin: 0;
   padding: 0;
-  margin-bottom: 67px;
-
   width: 907px;
 }
   
@@ -2188,11 +2191,14 @@ opacity: 0.3;
   если он используеться лишь в одном месте? */
   box-shadow: 0px 20px 40px rgba(41, 52, 73, 0.75);
   
-  display: grid;
+  display: none;
   grid-template-rows: 7px 1fr 112px;
   background-color: var(--basic-white);
 
-  position: relative;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 .popup-added-to-basket::before {
   content: "";
@@ -2268,6 +2274,7 @@ opacity: 0.3;
   font-size: 14px;
   line-height: 18px;
   background-color: var(--basic-white);
+  cursor: pointer;
 }
 
 .popup-feedback .popup-close:hover path,
