--- a/css/style.css
+++ b/css/style.css
@@ -808,6 +808,11 @@ button {
   width: 100%;
   height: 100%;
 }
+.popular-manufacturers-item img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+}
 .popular-products-item--img-container,
 .perforators-list-item--img-container {
   width: 184px;
@@ -821,6 +826,7 @@ button {
 .popular-products-item img {
   max-width: 184px;
   max-height: 164px;
+  object-fit: contain;
 }
 .popular-products-item:hover,
 .popular-products-item:focus,
@@ -1239,9 +1245,8 @@ margin-bottom: 30px;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 1;
-
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
-  /* display: none; */
+  display: none;
 }
 .modal-map-container::before {
   content: "";
@@ -1250,6 +1255,9 @@ margin-bottom: 30px;
   height: 7px;
   background-color: var(--basic-red);
   z-index: 1;
+}
+.modal-map-container iframe {
+  display: block;
 }
 
 /* footer */
@@ -1436,7 +1444,8 @@ margin-bottom: 30px;
   width: 620px;
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15); 
   background-color: var(--basic-white);
-
+  
+  /* display: flex; */
   display: none;
   flex-wrap: wrap;
   
@@ -1475,7 +1484,6 @@ margin-bottom: 30px;
 }
 .popup-feedback-description {
   margin-left: 80px;
-  margin-right: 100%;
   margin-bottom: 11px;
 }
 .popup-feedback [name="user-comment"] {
@@ -1571,6 +1579,7 @@ margin-bottom: 30px;
   right: 11px;
   border: none;
   background-color: transparent;
+  cursor: pointer;
 }
 .popup-feedback .popup-close>img {
   width: 21px;
@@ -2207,12 +2216,13 @@ opacity: 0.3;
   margin: 0 auto;
 
   background-image:url(../img/symbols/popup-added-to-basket.svg);
-  background-position: 81px 48px;
+  background-position: 81px 56px;
   background-repeat: no-repeat;
   
   box-shadow: 0px 20px 40px rgba(41, 52, 73, 0.75);
   
-  display: grid;
+  display: none;
+  /* display: grid; */
   grid-template-rows: 7px 1fr 112px;
   background-color: var(--basic-white);
 
@@ -2264,7 +2274,7 @@ opacity: 0.3;
   outline-offset: -1px;
 }
 .popup-added-to-basket .popup-close,
-.popup-feedback {
+.popup-feedback .popup-close {
   font-weight: 400;
   font-size: 14px;
   line-height: 18px;
@@ -2272,15 +2282,12 @@ opacity: 0.3;
   
   position: absolute;
   right: 11px;
-  top: 11px;
+  top: 18px;
 
   width: 21px;
   height: 21px;
 
   border: none;
-}
-.popup-feedback .popup-close {
-  top: 18px;
   cursor: pointer;
 }
 .popup-added-to-basket button {
